--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-MYSQL_USER=root # ou seu usuário
-MYSQL_PASSWORD=suaSenha
+MYSQL_USER=vinicius # ou seu usuário
+MYSQL_PASSWORD=5371159753Vi!
 MYSQL_HOSTNAME=localhost
 MYSQL_PORT=3306 # 3307 se estiver rodando no docker-compose
